Add Classificator Deserializer